--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,16 @@
+{
+  "manifest_version": 2,
 
+  "name": "NewText Plugin",
+  "description": "This extension will write new text on any page.",
+  "version": "1.0",
+
+  "browser_action": {
+   "default_icon": "ext.png",
+   "default_popup": "popup.html"
+  },
+  "permissions": [
+   "activeTab",
+	 "clipboardWrite"
+   ]
+}
